# aseq

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  aseq-config.cmake
cmake/: Custom.cmake  FindGlog.cmake  Findcppformat.cmake  GetGitRevisionDescription.cmake  PlatformLinuxGCC.cmake  PlatformMacOS.cmake
docs/doxygen/: CMakeLists.txt
src/: CMakeLists.txt  aseq-version.h  aseq-version.h.in
src/client/: CMakeLists.txt  commands.hpp  main.cpp  variants.cpp
src/tests/: CMakeLists.txt
src/tests/aseqlib-test/: CMakeLists.txt  main.cpp
src/tests/aseqlib-test/algorithm/: variant-consensus.cpp  variant-normalize.cpp  variant.cpp
src/tests/aseqlib-test/io/: fasta_sink.cpp  line_reader.cpp  line_writer.cpp  reference_source.cpp  variant-adapters.cpp  variant_sink.cpp  variant_source.cpp  vcf_sink.cpp  vcf_source.cpp
src/tests/aseqlib-test/model/: allele.cpp  variant_context.cpp
src/tests/aseqlib-test/util/: exception.cpp
src/tests/data/: reference.fa  single_sample.vcf  sites_only.vcf  sites_only.vcf.gz.tbi  sites_only_with_errors.vcf  sv_sites_only.vcf  sv_sites_only.vcf.gz.tbi  three_line.vcf.gz.tbi  vcf_specification.vcf
